Ajuste de validación de root admin en la consulta directa a los controllers y en avance en el gráfico general.

--- a/app/view/mostrarAvisos.html
+++ b/app/view/mostrarAvisos.html
@@ -14,7 +14,7 @@
         
         <link rel="stylesheet" href="../css/asociaciones.css">
         
-        <link href='http://fonts.googleapis.com/css?family=Michroma|Libre+Baskerville|Pacifico' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Michroma|Libre+Baskerville|Pacifico' rel='stylesheet' type='text/css'>
         
         <style>
             ul li div {
