--- a/app/view/seguimientoIntegranteItems.html
+++ b/app/view/seguimientoIntegranteItems.html
@@ -58,6 +58,9 @@
                 <div id="divGrafico">
                     <canvas id="grafico"></canvas>
                 </div>
+                <div id="divGraficoGeneral">
+                    <canvas id="graficoGeneral"></canvas>
+                </div>
             </div>
         </div>
         <div id="divMensaje">
