Ajustes gráfico general.

--- a/app/view/seguimientoIntegranteItems.html
+++ b/app/view/seguimientoIntegranteItems.html
@@ -57,9 +57,11 @@
                 </div>
                 <div id="divGrafico">
                     <canvas id="grafico"></canvas>
+                    <button onclick="mostrarTabla()">Regresar</button>
                 </div>
                 <div id="divGraficoGeneral">
                     <canvas id="graficoGeneral"></canvas>
+                    <button onclick="mostrarTabla()">Regresar</button>
                 </div>
             </div>
         </div>
