Agregar gráfico comparativo.

--- a/app/view/seguimientoIntegranteItems.html
+++ b/app/view/seguimientoIntegranteItems.html
@@ -57,11 +57,18 @@
                 </div>
                 <div id="divGrafico">
                     <canvas id="grafico"></canvas>
-                    <button onclick="mostrarTabla()">Regresar</button>
+                    <input id="btnRegresar" type="button" value="Regresar"
+                             class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"/>
                 </div>
                 <div id="divGraficoGeneral">
                     <canvas id="graficoGeneral"></canvas>
-                    <button onclick="mostrarTabla()">Regresar</button>
+                    <input id="btnRegresarGraficoGeneral" type="button" value="Regresar"
+                             class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"/>
+                </div>
+                <div id="divGraficoComparativo">
+                    <canvas id="graficoComparativo"></canvas>
+                    <input id="btnRegresarGraficoComparativo" type="button" value="Regresar"
+                             class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"/>
                 </div>
             </div>
         </div>
